syntax = "proto3";
package grpcdemo.proto;
option java_outer_classname = "JobInfoProto";

import "Common.proto";
import "JobQueue.proto";

service JobInfoService {
  // Retrieve jobInformation based on the jobId
  rpc GetJobInfo(JobInfoRequest)
      returns (JobInfoResponse);

  rpc GetJobInfoList(EmptyRequest) returns (stream JobInfoResponses);
}


message JobInfoRequest   {
  string jobId = 1;
}

// Request message for no-argument method
message EmptyRequest {
}



